# sirius_common

./: README.md
joystick_control/config/: diff_drive.yaml
joystick_control/launch/: remote_joystick_steering.launch
joystick_control/scripts/: joy_5dof_manipulator.py  joy_diff_drive.py  joy_multiplexer.py
sirius_calibration/: CMakeLists.txt  README.md  package.xml
sirius_calibration/allan_variance_ros/inflated/: imu.yaml
sirius_calibration/allan_variance_ros/raw/: allan_variance.csv  imu.yaml  imu_config.yaml
sirius_calibration/bags/: .gitignore
sirius_calibration/kalibr/: target.yaml
sirius_calibration/kalibr/camimu/inflated/: camimu-camchain-imucam.yaml  camimu-imu.yaml  camimu-results-imucam.txt
sirius_calibration/kalibr/camimu/raw/: camimu-camchain-imucam.yaml  camimu-imu.yaml  camimu-results-imucam.txt
sirius_calibration/kalibr/multicam/pinhole-equi/: multicam-camchain.yaml  multicam-results-cam.txt
sirius_calibration/kalibr/multicam/pinhole-radtan/: multicam-camchain.yaml  multicam-results-cam.txt
sirius_calibration/launch/: calibration.launch
sirius_common/: CMakeLists.txt  package.xml
sirius_control/: CMakeLists.txt  README.md  package.xml
sirius_control/config/: controllers.yaml
sirius_control/launch/: controllers.launch
sirius_control/src/: control.cpp
sirius_description/: CMakeLists.txt  README.md  package.xml
sirius_description/config/: controllers.yaml  mechanical.yaml
sirius_description/config/inertial/: platform.yaml  suspension.yaml  wheel.yaml
sirius_description/docs/: sirius2_konik (3).jpg:Zone.Identifier
sirius_description/launch/: sirius_description.launch  transforms_erc22.launch
sirius_description/robots/: sirius.urdf.xacro
sirius_description/urdf/: materials.urdf.xacro
sirius_description/urdf/hp_4310/: hp_4310.urdf.xacro
sirius_description/urdf/oak-d-w/: collisions.yaml  oak-d-w.urdf.xacro
sirius_description/urdf/sirius/: collisions.yaml  gnss.urdf.xacro  indicator_light.urdf.xacro  platform.urdf.xacro  rim.urdf.xacro  suspension.urdf.xacro  wheel.urdf.xacro
sirius_manip_control/config/: manip_roboclaw_interface.yaml
sirius_manip_control/scripts/: voodoo_demultiplexer.py
sirius_manip_control/scripts/hardware_interface/: manip_roboclaw_interface.py
sirius_navigation/: CMakeLists.txt  README.md  package.xml
sirius_navigation/config/: map_sensor_fusion.yaml  odom_sensor_fusion.yaml
sirius_navigation/launch/: complementary_filter.launch  gnss.launch  localization.launch  madgwick_filter.launch  map_sensor_fusion.launch  markers_erc.launch  navsat_transform.launch  odom_sensor_fusion.launch
sirius_navigation/scripts/: imu_align_north.py  localization_evaluation.py  noise_variance_estimator.py  random_traversal.py
