<?xml version="1.0"?>
<package format="2">
  <name>sirius_control</name>
  <version>1.0.0</version>
  <description>Sirius control loop for ROS Control and controlers configuration</description>
  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>combined_robot_hw</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>combined_robot_hw</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>controller_manager</exec_depend>

</package>
